Fix Itembuilder Lore