@@ -4,7 +4,9 @@ import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class ItemBuilder {
 
@@ -28,7 +30,18 @@ public class ItemBuilder {
 
     public ItemBuilder setLore(String... lore){
         ItemMeta im = is.getItemMeta();
-        im.setLore(Arrays.asList(lore));
+        ArrayList<String> finalArray = new ArrayList<>();
+        for(String loreText : lore) finalArray.addAll(List.of(loreText.split("\n")));
+        im.setLore(finalArray);
+        is.setItemMeta(im);
+        return this;
+    }
+
+    public ItemBuilder addLore(String lore) {
+        ItemMeta im = is.getItemMeta();
+        List<String> loreA = im.getLore();
+        loreA.add(lore);
+        im.setLore(loreA);
         is.setItemMeta(im);
         return this;
     }
